[package]
name = "tinypool"
version = "0.2.0"
authors = ["Antonio Mamić <antoniomamic007@gmail.com>"]
edition = "2021"
description = "A simple thread pool implementation in Rust"
readme = "README.md"
repository = "https://github.com/amamic1803/tinypool-rs"
license = "MIT"
keywords = ["thread", "pool", "threadpool"]
categories = ["concurrency"]
include = [
    "/src",
    "/tests",
    "Cargo.toml",
    "LICENSE.md",
    "README.md"
]


[dependencies]
